# router/router.go
@@ -14,6 +14,8 @@ func New(mux *mux.Router) {
 	ctrl := controller.New(&listTodos)
 
 	mux.HandleFunc("/todos", ctrl.CreateTodo).Methods("POST")
+
+	mux.HandleFunc("/todos", ctrl.GetAllTodos).Methods("GET")
 	// Handle get todo by id
 	mux.HandleFunc("/todos/{id}", ctrl.GetTodoById).Methods("GET")
 	// Handle update todo by id
